--- a/uxmal.service
+++ b/uxmal.service
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 Type=simple
 User=uslu
-ExecStart=screen -dm -S NODE_ENV=production /usr/local/bin/node /home/uslu/Instalador-rasp-ucpnuevo/uxmal-rasp-module/uxmal-ropo/dist/index.js
+ExecStart=screen -dm -S ropongi cd /home/uslu/Instalador-rasp-ucpnuevo/uxmal-rasp-module/dist/ && sudo NODE_ENV=production /home/uslu/.nvm/versions/node/v20.12.2/bin/node dist/index.js
 Restart=on-failure
 
 [Install]
