--- a/uxmal.service
+++ b/uxmal.service
@@ -5,8 +5,8 @@ After=network.target
 
 [Service]
 Type=simple
-User=uslu
-ExecStart=screen -dm -S ropongi cd /home/uslu/Instalador-rasp-ucpnuevo/uxmal-rasp-module/dist/ && sudo NODE_ENV=production /home/uslu/.nvm/versions/node/v20.12.2/bin/node dist/index.js
+User=root
+ExecStart=sudo screen -dm -S ropongi cd /home/uslu/Instalador-rasp-ucpnuevo/uxmal-rasp-module/dist/ && sudo NODE_ENV=production /home/uslu/.nvm/versions/node/v20.12.2/bin/node dist/index.js
 Restart=on-failure
 
 [Install]
