--- a/uxmal.service
+++ b/uxmal.service
@@ -4,9 +4,8 @@ Documentation=UxmalStream.mx
 After=network.target 
 
 [Service]
-Type=simple
 User=root
-ExecStart=cd /home/uslu/Instalador-rasp-ucpnuevo/uxmal-rasp-module/ && screen -dm -S ropongi /home/uslu/.nvm/versions/node/v20.12.2/bin/node dist/index.js
+ExecStart=bash /home/uslu/mir_launchr.sh
 Restart=on-failure
 
 [Install]
